--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "@pulumi/aws": "^6.62.0",
+        "@pulumi/command": "^1.0.1",
         "@pulumi/eks": "^3.3.0",
         "@pulumi/kubernetes": "^4.18.3",
         "@pulumi/pulumi": "^3.113.0"
