--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     },
     "dependencies": {
         "@pulumi/aws": "^6.62.0",
+        "@pulumi/awsx": "^2.19.0",
+        "@pulumi/azure-native": "^2.75.0",
         "@pulumi/command": "^1.0.1",
         "@pulumi/eks": "^3.3.0",
         "@pulumi/kubernetes": "^4.18.3",
