--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,50 @@
 {
     "compilerOptions": {
         "strict": true,
-        "outDir": "bin",
+        "outDir": "./dist",
         "target": "es2020",
         "module": "commonjs",
         "moduleResolution": "node",
+        "esModuleInterop": true,
         "sourceMap": true,
         "experimentalDecorators": true,
         "pretty": true,
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "declaration": true,
+        "emitDeclarationOnly": false
     },
     "files": [
-        "index.ts"
-    ]
+        "index.ts",
+        "typings.d.ts"
+    ],
+    "include": [
+        "typings.d.ts",
+        "./**/*.ts"
+    ],
+    // https://github.com/microsoft/TypeScript/issues/54144 tsc --watch doesn't work in docker container on WSL2
+    // https://www.typescriptlang.org/tsconfig#watchOptions
+    // https://www.typescriptlang.org/docs/handbook/configuring-watch.html
+    // NEW: Options for file/directory watching
+    "watchOptions": {
+        // Use native file system events for files and directories
+        "watchFile": "dynamicPriorityPolling",
+        "watchDirectory": "dynamicPriorityPolling",
+        // Poll files for updates more frequently
+        // when they're updated a lot.
+        "fallbackPolling": "dynamicPriority",
+        // Don't coalesce watch notification
+        "synchronousWatchDirectory": true,
+        // Finally, two additional settings for reducing the amount of possible
+        // files to track  work from these directories
+        "excludeDirectories": [
+            "**/node_modules",
+            "**/build",
+            "temp/*"
+        ],
+        "excludeFiles": [
+            "build/fileWhichChangesOften.ts"
+        ]
+    }
 }
