--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "pulumi-k8s",
     "main": "index.ts",
     "devDependencies": {
+        "@types/js-yaml": "^4.0.9",
         "@types/node": "^18",
         "typescript": "^5.7.2"
     },
